--- a/Components/Fusion/Fusion.Connector.OpenHR/App.config
+++ b/Components/Fusion/Fusion.Connector.OpenHR/App.config
@@ -1,29 +1,25 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core"/>
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core"/>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core"/>
-    <section name="SubscriptionConfig" type="Fusion.Connector.OpenHR.Configuration.SubscriptionsSection, Fusion.Connector.OpenHR"/>
-    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core"/>
+    <section name="MsmqTransportConfig" type="NServiceBus.Config.MsmqTransportConfig, NServiceBus.Core" />
+    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
+    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />
+    <section name="SubscriptionConfig" type="Fusion.Connector.OpenHR.Configuration.SubscriptionsSection, Fusion.Connector.OpenHR" />
+    <section name="Logging" type="NServiceBus.Config.Logging, NServiceBus.Core" />
   </configSections>
-
   <appSettings>
-    <add key="Name" value="OpenHR Fusion Connector"/>
-    <add key="ClientSettingsProvider.ServiceUri" value=""/>
-    <add key="OpenHR_db" value="OpenHR51_nfp"/>
-    <add key="OpenHR_server" value="future dev"/>
-    <add key="OpenHR_server" value="Community"/>
-    <add key="Community" value="test"/>    
+    <add key="Name" value="OpenHR Fusion Connector (STD)" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="OpenHR_db" value="OpenHR51_nfp" />
+    <add key="OpenHR_server" value="future dev" />
+    <add key="OpenHR_server" value="Community" />
+    <add key="Community" value="test" />
   </appSettings>
-  
-  
   <!--This will be replaced by an encoded string in a later version-->
   <connectionStrings>
-    <add name="db" connectionString="Data Source=coa14204;Initial Catalog=OpenHR51_nfp;Integrated Security=True;APP=OpenHR Fusion Connector" providerName="System.Data.SqlClient"/>    
+    <add name="db" connectionString="Data Source=coa14204;Initial Catalog=OpenHR51_nfp;Integrated Security=True;APP=OpenHR Fusion Connector" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  
-  <MsmqTransportConfig ErrorQueue="error" NumberOfWorkerThreads="1" MaxRetries="5"/>
+  <MsmqTransportConfig ErrorQueue="error" NumberOfWorkerThreads="1" MaxRetries="5" />
   <!-- 1. In order to configure remote endpoints use the format: "queue@machine" 
        2. Input queue must be on the same machine as the process feeding off of it.
        3. Error queue can (and often should) be on a different machine.
@@ -31,46 +27,49 @@
   -->
   <UnicastBusConfig DistributorControlAddress="" DistributorDataAddress="" ForwardReceivedMessagesTo="">
     <MessageEndpointMappings>
-      <add Messages="Fusion.Messages.General.LogMessage, Fusion.Messages.General" Endpoint="fusion.logservice"/>
-      <add Messages="Fusion.Messages.General.LogTranslationMessage, Fusion.Messages.General" Endpoint="fusion.logservice"/>
-      
+      <add Messages="Fusion.Messages.General.LogMessage, Fusion.Messages.General" Endpoint="fusion.logservice" />
+      <add Messages="Fusion.Messages.General.LogTranslationMessage, Fusion.Messages.General" Endpoint="fusion.logservice" />
       <!--Multi master messages-->
-      <add Messages="Fusion.Messages.SocialCare.StaffChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local"/>
-      <add Messages="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local"/>
-
-      <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@10.14.1.22" />
-      <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@10.14.1.22" />
-      
+      <add Messages="Fusion.Messages.SocialCare.StaffChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
+      <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
       <add Messages="Fusion.Messages.SocialCare.StaffContractChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
       <add Messages="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
-
       <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
       <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
-
       <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
       <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
-
       <add Messages="Fusion.Messages.SocialCare.StaffContactChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
       <add Messages="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
-
       <!--Publish messages-->
-      <!--<add Messages="Fusion.Messages.SocialCare.StaffHolidayBalanceRemainingChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.connector.openhr@127.0.0.1" />-->
-
       <!--Subscribe Messages-->
-
+      <add Messages="Fusion.Messages.SocialCare.StaffTimeSheetPerContractSubmissionMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@harpdev02.coa.local" />
     </MessageEndpointMappings>
   </UnicastBusConfig>
-
   <SubscriptionConfig>
-    <subscribe type="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare"/>
-    <subscribe type="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" />    
-    <subscribe type="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" />   
+    <subscribe type="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" />
+    <subscribe type="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" />
+    <subscribe type="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" />
     <subscribe type="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" />
     <subscribe type="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" />
-    <!--    <subscribe type="Fusion.Messages.SocialCare.StaffTimeSheetPerContractSubmissionMessage, Fusion.Messages.SocialCare" /> -->
+    <!--<subscribe type="Fusion.Messages.SocialCare.StaffTimeSheetPerContractSubmissionMessage, Fusion.Messages.SocialCare" />-->
     <subscribe type="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" />
   </SubscriptionConfig>
-
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error"/>
-
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />
+  <startup>
+    <supportedRuntime version="v2.0.50727" />
+  </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
+</configuration>
