--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -153,6 +153,12 @@
     <Content Include="Content\images\ABSLogo\OpenHRLogo72.png" />
     <Content Include="Content\images\ABSLogo\OpenHRLogo748x1024.png" />
     <Content Include="Content\images\ABSLogo\OpenHRLogo768x1004.png" />
+    <Content Include="Content\themes\jMetro\images\ui-icons_3399ff_0.png" />
+    <Content Include="Content\themes\jMetro\images\ui-icons_525252_0.png" />
+    <Content Include="Content\themes\jMetro\images\ui-icons_66B3FF_0.png" />
+    <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
+    <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
+    <Content Include="Content\themes\jMetro\jquery-ui.css" />
     <Content Include="lpks\ssmain.lpk" />
     <None Include="_bin_deployableAssemblies\Microsoft.Web.Infrastructure.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.Razor.dll" />
