diiferent connection string (std database)

--- a/Components/Fusion/Fusion.Connector.OpenHR/App.config
+++ b/Components/Fusion/Fusion.Connector.OpenHR/App.config
@@ -17,7 +17,7 @@
   </appSettings>
   <!--This will be replaced by an encoded string in a later version-->
   <connectionStrings>
-    <add name="db" connectionString="Data Source=coa14204;Initial Catalog=OpenHR51_nfp;Integrated Security=True;APP=OpenHR Fusion Connector" providerName="System.Data.SqlClient" />
+    <add name="db" connectionString="Data Source=coa14204;Initial Catalog=OpenHR51_std;Integrated Security=True;APP=OpenHR Fusion Connector" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <MsmqTransportConfig ErrorQueue="error" NumberOfWorkerThreads="1" MaxRetries="5" />
   <!-- 1. In order to configure remote endpoints use the format: "queue@machine" 
