--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -300,7 +300,8 @@
     <Content Include="Content\themes\redmond\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\redmond\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\redmond\minified\jquery.ui.tooltip.min.css" />
-    <Content Include="Scripts\jquery.jqGrid.min.js" />
+    <None Include="Scripts\FormScripts\mailmergedef.js" />
+    <None Include="Scripts\jquery.jqGrid.min.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -429,12 +430,15 @@
     </Content>
     <Content Include="Pictures\ProfilePhotos\dAvery.jpg" />
     <Content Include="Pictures\ProfilePhotos\mWORTHING.jpg" />
-    <Content Include="Scripts\FormScripts\recordEdit.js" />
-    <Content Include="Scripts\FormScripts\Util_Def_CustomReports.js" />
-    <Content Include="Scripts\jquery-1.8.3.js" />
-    <Content Include="Scripts\jquery-ui-1.9.2.custom.js" />
-    <Content Include="Scripts\jquery-ui-1.9.2.custom.min.js" />
-    <Content Include="Scripts\jquery.jqGrid.src.js" />
+    <None Include="Scripts\FormScripts\recordEdit.js" />
+    <None Include="Scripts\FormScripts\Util_Def_CustomReports.js" />
+    <None Include="Scripts\jquery-1.8.3.js" />
+    <None Include="Scripts\jquery-ui-1.9.2.custom.js" />
+    <None Include="Scripts\jquery-ui-1.9.2.custom.min.js" />
+    <None Include="Scripts\jquery.jqGrid.src.js" />
+    <None Include="Scripts\FormScripts\crosstabdef.js" />
+    <None Include="Scripts\FormScripts\util_def_exprcomponent.js" />
+    <None Include="Scripts\FormScripts\util_def_expression.js" />
     <Content Include="Scripts\jsTree\theme\apple\bg.jpg" />
     <Content Include="Scripts\jsTree\theme\apple\d.png" />
     <Content Include="Scripts\jsTree\theme\apple\dot_for_ie.gif" />
@@ -477,15 +481,15 @@
     <Content Include="Content\widgetCSS\wdg_oHRHoliday.css" />
     <Content Include="Include\ctl_SetFont.txt" />
     <Content Include="Include\gotoWork.txt" />
-    <Content Include="Scripts\FormScripts\menu.js" />
-    <Content Include="Scripts\jquery.flip.js" />
+    <None Include="Scripts\FormScripts\menu.js" />
+    <None Include="Scripts\jquery.flip.js" />
     <Content Include="Scripts\jsTree\jquery.jstree.js" />
-    <Content Include="Scripts\jquery.marquee.js" />
-    <Content Include="Scripts\jquery-1.8.2.js" />
-    <Content Include="Scripts\jquery-ui-1.9.1.custom.js" />
-    <Content Include="Scripts\jquery-ui-1.9.1.custom.min.js" />
-    <Content Include="Scripts\jquery.gridster.js" />
-    <Content Include="Scripts\jquery.mousewheel.js" />
+    <None Include="Scripts\jquery.marquee.js" />
+    <None Include="Scripts\jquery-1.8.2.js" />
+    <None Include="Scripts\jquery-ui-1.9.1.custom.js" />
+    <None Include="Scripts\jquery-ui-1.9.1.custom.min.js" />
+    <None Include="Scripts\jquery.gridster.js" />
+    <None Include="Scripts\jquery.mousewheel.js" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64DIS.png" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64HOVER.png" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64NORM.png" />
@@ -604,22 +608,22 @@
     <Content Include="Scripts\officebar\winkit\Workflow64DIS.png" />
     <Content Include="Scripts\officebar\winkit\Workflow64HOVER.png" />
     <Content Include="Scripts\officebar\winkit\Workflow64NORM.png" />
-    <Content Include="Scripts\OpenHR.js" />
-    <Content Include="Scripts\Utilities\crosstab.js" />
-    <Content Include="Scripts\Utilities\customreport.js" />
-    <Content Include="Scripts\Utilities\general.js" />
+    <None Include="Scripts\OpenHR.js" />
+    <None Include="Scripts\Utilities\crosstab.js" />
+    <None Include="Scripts\Utilities\customreport.js" />
+    <None Include="Scripts\Utilities\general.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRHoliday.js" />
     <Content Include="Scripts\widgetScripts\external wdg_oHRDBV.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRButton.js" />
     <Content Include="Scripts\widgetScripts\getLinks.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRDBV.js" />
     <Content Include="packages.config" />
-    <Content Include="Scripts\ctl_SetFont.js" />
-    <Content Include="Scripts\ctl_SetStyles.js" />
-    <Content Include="Scripts\jquery.cookie.js" />
-    <Content Include="Scripts\jquery.rightClick.js" />
-    <Content Include="Scripts\jquery.ui.touch-punch.min.js" />
-    <Content Include="Scripts\menu.js" />
+    <None Include="Scripts\ctl_SetFont.js" />
+    <None Include="Scripts\ctl_SetStyles.js" />
+    <None Include="Scripts\jquery.cookie.js" />
+    <None Include="Scripts\jquery.rightClick.js" />
+    <None Include="Scripts\jquery.ui.touch-punch.min.js" />
+    <None Include="Scripts\menu.js" />
     <Content Include="Views\Account\About.ascx" />
     <Content Include="Views\Account\Loginerror.aspx" />
     <Content Include="Views\Account\ForcedPasswordChange.aspx" />
@@ -643,10 +647,6 @@
     <Content Include="Views\Home\Find.ascx" />
     <Content Include="Views\Home\fixedlinks.ascx" />
     <Content Include="Views\Home\linksMain.aspx" />
-    <Content Include="Views\Home\util_def_calendarreport.ascx" />
-    <Content Include="Views\Home\util_def_calendarreportdates.asp.ascx" />
-    <Content Include="Views\Home\util_def_calendarreportdates_data.ascx" />
-    <Content Include="Views\Home\util_def_calendarreportdates_main.ascx" />
     <Content Include="Views\Home\util_def_mailmerge.ascx" />
     <Content Include="Views\Home\util_validate_calendarreport.ascx" />
     <Content Include="Views\Home\util_validate_mailmerge.ascx" />
@@ -709,16 +709,16 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.5.1.js" />
-    <Content Include="Scripts\jquery-1.5.1.min.js" />
-    <Content Include="Scripts\jquery-ui-1.8.11.js" />
-    <Content Include="Scripts\jquery-ui-1.8.11.min.js" />
-    <Content Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\modernizr-1.7.js" />
-    <Content Include="Scripts\modernizr-1.7.min.js" />
+    <None Include="Scripts\jquery-1.5.1-vsdoc.js" />
+    <None Include="Scripts\jquery-1.5.1.js" />
+    <None Include="Scripts\jquery-1.5.1.min.js" />
+    <None Include="Scripts\jquery-ui-1.8.11.js" />
+    <None Include="Scripts\jquery-ui-1.8.11.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <None Include="Scripts\jquery.validate.js" />
+    <None Include="Scripts\jquery.validate.min.js" />
+    <None Include="Scripts\modernizr-1.7.js" />
+    <None Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Views\Shared\Util_Def_CustomReports\dialog.ascx" />
     <Content Include="Views\Shared\Util_Def_CustomReports\grdColProps.ascx" />
     <Content Include="Views\Shared\Util_Def_CustomReports\ssOleDBGridAvailableColumns.ascx" />
@@ -727,7 +727,6 @@
     <Content Include="Views\Shared\Util_Def_CustomReports\ssOleDBGridSelectedColumns.ascx" />
     <Content Include="Views\Shared\Util_Def_CustomReports\ssOleDBGridSortOrder.ascx" />
     <Content Include="Views\Home\util_run_calendarreport_nav.ascx" />
-    <Content Include="Views\util_def_mailmerge.ascx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -738,16 +737,16 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\MicrosoftAjax.js" />
-    <Content Include="Scripts\MicrosoftAjax.debug.js" />
-    <Content Include="Scripts\MicrosoftMvcAjax.js" />
-    <Content Include="Scripts\MicrosoftMvcAjax.debug.js" />
-    <Content Include="Scripts\MicrosoftMvcValidation.js" />
-    <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
+    <None Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <None Include="Scripts\jquery.unobtrusive-ajax.min.js" />
+    <None Include="Scripts\jquery.validate.unobtrusive.js" />
+    <None Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <None Include="Scripts\MicrosoftAjax.js" />
+    <None Include="Scripts\MicrosoftAjax.debug.js" />
+    <None Include="Scripts\MicrosoftMvcAjax.js" />
+    <None Include="Scripts\MicrosoftMvcAjax.debug.js" />
+    <None Include="Scripts\MicrosoftMvcValidation.js" />
+    <None Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
