--- a/Components/Fusion/Fusion.Test.SocialCare/App.config
+++ b/Components/Fusion/Fusion.Test.SocialCare/App.config
@@ -42,17 +42,23 @@
 
       <!-- staff messages from republisher -->      
 
-      <add Messages="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />      
-      <add Messages="Fusion.Messages.SocialCare.StaffChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
+      <add Messages="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />      
+      <add Messages="Fusion.Messages.SocialCare.StaffChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
 
-      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
-      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContractChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
 
-      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
-      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+      <add Messages="Fusion.Messages.SocialCare.StaffContactChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
 
-      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
-      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff" />
+      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+      <add Messages="Fusion.Messages.SocialCare.StaffSkillChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+
+      <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+      <add Messages="Fusion.Messages.SocialCare.StaffPictureChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+
+      <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
+      <add Messages="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.staff@YOURSERVER" />
 
 
       <!-- service user messages from republisher -->
@@ -65,7 +71,6 @@
       <add Messages="Fusion.Messages.SocialCare.ServiceUserHomeAddressChangeMessage, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.serviceuser" />
       <add Messages="Fusion.Messages.SocialCare.ServiceUserHomeAddressChangeRequest, Fusion.Messages.SocialCare" Endpoint="fusion.publisher.socialcare.serviceuser" />
 
-
     </MessageEndpointMappings>
   </UnicastBusConfig>
 
@@ -73,8 +78,9 @@
     <subscribe type="Fusion.Messages.SocialCare.StaffChangeMessage, Fusion.Messages.SocialCare" />
     <subscribe type="Fusion.Messages.SocialCare.StaffContactChangeMessage, Fusion.Messages.SocialCare" />
     <subscribe type="Fusion.Messages.SocialCare.StaffSkillChangeMessage, Fusion.Messages.SocialCare" />
-
-
+    <subscribe type="Fusion.Messages.SocialCare.StaffPictureChangeMessage, Fusion.Messages.SocialCare" />
+    <subscribe type="Fusion.Messages.SocialCare.StaffLegalDocumentChangeMessage, Fusion.Messages.SocialCare" />
+    <subscribe type="Fusion.Messages.SocialCare.StaffContractChangeMessage, Fusion.Messages.SocialCare" />
   </SubscriptionConfig>
 
   
