--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -53,8 +53,14 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime">
+      <HintPath>..\packages\WebGrease.1.3.0\lib\Antlr3.Runtime.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Web.Optimization">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.0.0\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -76,6 +82,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="WebGrease">
+      <HintPath>..\packages\WebGrease.1.3.0\lib\WebGrease.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -162,6 +171,10 @@
     <Content Include="lpks\ssmain.lpk" />
     <Content Include="Content\fonts\SSI80v194934\SSI80v1.woff" />
     <None Include="My Project\PublishProfiles\Local.pubxml" />
+    <None Include="Scripts\FormScripts\find.js" />
+    <Content Include="Scripts\FormScripts\optionData.js" />
+    <Content Include="Scripts\jquery\jquery-ui-1.9.2.custom.js" />
+    <None Include="Scripts\jquery\jquery.jqGrid.src.js" />
     <None Include="_bin_deployableAssemblies\Microsoft.Web.Infrastructure.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.Razor.dll" />
     <None Include="_bin_deployableAssemblies\System.Web.WebPages.dll" />
@@ -301,8 +314,7 @@
     <Content Include="Content\themes\redmond\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\redmond\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\redmond\minified\jquery.ui.tooltip.min.css" />
-    <None Include="Scripts\FormScripts\util_def_mailmerge.js" />
-    <None Include="Scripts\jquery.jqGrid.min.js" />
+    <None Include="Scripts\FormScripts\mailmergedef.js" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -433,20 +445,17 @@
     <Content Include="Pictures\ProfilePhotos\mWORTHING.jpg" />
     <None Include="Scripts\FormScripts\recordEdit.js" />
     <None Include="Scripts\FormScripts\Util_Def_CustomReports.js" />
-    <None Include="Scripts\jquery-1.8.3.js" />
-    <None Include="Scripts\jquery-ui-1.9.2.custom.js" />
-    <None Include="Scripts\jquery-ui-1.9.2.custom.min.js" />
-    <None Include="Scripts\jquery.jqGrid.src.js" />
     <None Include="Scripts\FormScripts\crosstabdef.js" />
     <None Include="Scripts\FormScripts\util_def_exprcomponent.js" />
     <None Include="Scripts\FormScripts\util_def_expression.js" />
     <Content Include="Scripts\FormScripts\calendarreportdef.js" />
-    <None Include="Scripts\jquery.maskedinput.js" />
-    <Content Include="Scripts\jsTree\theme\apple\bg.jpg" />
-    <Content Include="Scripts\jsTree\theme\apple\d.png" />
-    <Content Include="Scripts\jsTree\theme\apple\dot_for_ie.gif" />
-    <Content Include="Scripts\jsTree\theme\apple\style.css" />
-    <Content Include="Scripts\jsTree\theme\apple\throbber.gif" />
+    <None Include="Scripts\jquery\jquery.maskedinput.js" />
+    <None Include="Scripts\jquery\jquery-1.8.3.js" />
+    <Content Include="Scripts\jquery\jsTree\theme\apple\bg.jpg" />
+    <Content Include="Scripts\jquery\jsTree\theme\apple\d.png" />
+    <Content Include="Scripts\jquery\jsTree\theme\apple\dot_for_ie.gif" />
+    <Content Include="Scripts\jquery\jsTree\theme\apple\style.css" />
+    <Content Include="Scripts\jquery\jsTree\theme\apple\throbber.gif" />
     <Content Include="Scripts\officebar\images\bg.png" />
     <Content Include="Scripts\officebar\images\bg_tab.png" />
     <Content Include="Scripts\officebar\images\button2_over.png" />
@@ -469,11 +478,11 @@
     <Content Include="Scripts\officebar\images\tab_right_over.gif" />
     <Content Include="Scripts\officebar\jquery.officebar.js" />
     <Content Include="Scripts\officebar\jquery.ribbon.css" />
-    <Content Include="Scripts\jsTree\theme\classic\d.gif" />
-    <Content Include="Scripts\jsTree\theme\classic\d.png" />
-    <Content Include="Scripts\jsTree\theme\classic\dot_for_ie.gif" />
-    <Content Include="Scripts\jsTree\theme\classic\style.css" />
-    <Content Include="Scripts\jsTree\theme\classic\throbber.gif" />
+    <Content Include="Scripts\jquery\jsTree\theme\classic\d.gif" />
+    <Content Include="Scripts\jquery\jsTree\theme\classic\d.png" />
+    <Content Include="Scripts\jquery\jsTree\theme\classic\dot_for_ie.gif" />
+    <Content Include="Scripts\jquery\jsTree\theme\classic\style.css" />
+    <Content Include="Scripts\jquery\jsTree\theme\classic\throbber.gif" />
     <Content Include="Content\Menu\ActiveNode.png" />
     <Content Include="Content\Menu\folder_closed.png" />
     <Content Include="Content\Menu\InactiveNode.png" />
@@ -485,14 +494,11 @@
     <Content Include="Include\ctl_SetFont.txt" />
     <Content Include="Include\gotoWork.txt" />
     <None Include="Scripts\FormScripts\menu.js" />
-    <None Include="Scripts\jquery.flip.js" />
-    <Content Include="Scripts\jsTree\jquery.jstree.js" />
-    <None Include="Scripts\jquery.marquee.js" />
-    <None Include="Scripts\jquery-1.8.2.js" />
-    <None Include="Scripts\jquery-ui-1.9.1.custom.js" />
-    <None Include="Scripts\jquery-ui-1.9.1.custom.min.js" />
-    <None Include="Scripts\jquery.gridster.js" />
-    <None Include="Scripts\jquery.mousewheel.js" />
+    <None Include="Scripts\jquery\jquery.flip.js" />
+    <Content Include="Scripts\jquery\jsTree\jquery.jstree.js" />
+    <None Include="Scripts\jquery\jquery.marquee.js" />
+    <None Include="Scripts\jquery\jquery.gridster.js" />
+    <None Include="Scripts\jquery\jquery.mousewheel.js" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64DIS.png" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64HOVER.png" />
     <Content Include="Scripts\officebar\winkit\AbsenceBreakdown64NORM.png" />
@@ -612,9 +618,9 @@
     <Content Include="Scripts\officebar\winkit\Workflow64HOVER.png" />
     <Content Include="Scripts\officebar\winkit\Workflow64NORM.png" />
     <None Include="Scripts\OpenHR.js" />
-    <None Include="Scripts\Utilities\crosstab.js" />
-    <None Include="Scripts\Utilities\customreport.js" />
-    <None Include="Scripts\Utilities\general.js" />
+    <None Include="Scripts\FormScripts\crosstab.js" />
+    <None Include="Scripts\FormScripts\customreport.js" />
+    <None Include="Scripts\FormScripts\general.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRHoliday.js" />
     <Content Include="Scripts\widgetScripts\external wdg_oHRDBV.js" />
     <Content Include="Scripts\widgetScripts\wdg_oHRButton.js" />
@@ -623,10 +629,10 @@
     <Content Include="packages.config" />
     <None Include="Scripts\ctl_SetFont.js" />
     <None Include="Scripts\ctl_SetStyles.js" />
-    <None Include="Scripts\jquery.cookie.js" />
-    <None Include="Scripts\jquery.rightClick.js" />
-    <None Include="Scripts\jquery.ui.touch-punch.min.js" />
-    <None Include="Scripts\menu.js" />
+    <None Include="Scripts\jquery\jquery.cookie.js" />
+    <None Include="Scripts\jquery\jquery.rightClick.js" />
+    <None Include="Scripts\jquery\jquery.ui.touch-punch.min.js" />
+    <None Include="Scripts\jquery\jquery.menu.js" />
     <Content Include="Views\Account\About.ascx" />
     <Content Include="Views\Account\Loginerror.aspx" />
     <Content Include="Views\Account\ForcedPasswordChange.aspx" />
@@ -717,14 +723,8 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <None Include="Scripts\jquery-1.5.1-vsdoc.js" />
-    <None Include="Scripts\jquery-1.5.1.js" />
-    <None Include="Scripts\jquery-1.5.1.min.js" />
-    <None Include="Scripts\jquery-ui-1.8.11.js" />
-    <None Include="Scripts\jquery-ui-1.8.11.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <None Include="Scripts\jquery.validate.js" />
-    <None Include="Scripts\jquery.validate.min.js" />
+    <None Include="Scripts\jquery\jquery.validate-vsdoc.js" />
+    <None Include="Scripts\jquery\jquery.validate.js" />
     <None Include="Scripts\modernizr-1.7.js" />
     <None Include="Scripts\modernizr-1.7.min.js" />
     <Content Include="Views\Shared\Util_Def_CustomReports\dialog.ascx" />
@@ -745,16 +745,11 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <None Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <None Include="Scripts\jquery.unobtrusive-ajax.min.js" />
-    <None Include="Scripts\jquery.validate.unobtrusive.js" />
-    <None Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <None Include="Scripts\MicrosoftAjax.js" />
-    <None Include="Scripts\MicrosoftAjax.debug.js" />
-    <None Include="Scripts\MicrosoftMvcAjax.js" />
-    <None Include="Scripts\MicrosoftMvcAjax.debug.js" />
-    <None Include="Scripts\MicrosoftMvcValidation.js" />
-    <None Include="Scripts\MicrosoftMvcValidation.debug.js" />
+    <None Include="Scripts\jquery\jquery.unobtrusive-ajax.js" />
+    <None Include="Scripts\jquery\jquery.validate.unobtrusive.js" />
+    <None Include="Scripts\Microsoft\MicrosoftAjax.js" />
+    <None Include="Scripts\Microsoft\MicrosoftMvcAjax.js" />
+    <None Include="Scripts\Microsoft\MicrosoftMvcValidation.js" />
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -788,9 +783,10 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\COAInt_Server\COAInt_Server.vbproj">
+    <ProjectReference Include="..\..\..\Components\COAInt_Server\COAInt_Server.vbproj">
       <Project>{2af7f0b5-431d-4892-b0b1-9397c73ebfd7}</Project>
       <Name>COAInt_Server</Name>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
