--- a/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
+++ b/Web Apps/DMI.NET/DMI.NET/DMI.NET.vbproj
@@ -657,7 +657,7 @@
     <Content Include="Views\Home\fixedlinks.ascx" />
     <Content Include="Views\Home\linksMain.aspx" />
     <Content Include="Views\Home\tbAddFromWaitingListFind.ascx" />
-    <Content Include="Views\Home\tbBookCourse.ascx" />
+    <Content Include="Views\Home\tbBookCourseFind.ascx" />
     <Content Include="Views\Home\tbStatusPrompt.ascx" />
     <Content Include="Views\Home\util_def_calendarreport.ascx" />
     <Content Include="Views\Home\util_def_calendarreportdates.asp.ascx" />
